# discord-wow-helper

./: .gitignore  CLAUDE.md  Dockerfile  README.md  deployment.yaml  pyproject.toml  requirements.txt  wow_helper_bot.py
.github/workflows/: check.yml
mappings/: archon.yaml  guides.yaml  mplus-routes.yaml  mplus.yaml  murloc.yaml  raid.yaml
